terraform/tf_files/shared/twilio-proxy.tf
data "aws_ami" "twilio_proxy" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-arm64-server-*"]
  }

  filter {
    name   = "root-device-type"
    values = ["ebs"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"]
}

locals {
  twilio_proxy_ec2_userdata = <<USERDATA
#cloud-config

write_files:
- path: /data/twilio-proxy/docker-compose.yml
  owner: root:root
  permissions: '0644'
  encoding: b64
  content: ${base64encode(templatefile("${var.scripts_dir}/twilio-proxy/docker-compose.yml", { version = var.twilio_proxy_caddy_version }))}
- path: /data/twilio-proxy/config/Caddyfile
  owner: root:root
  permissions: '0644'
  encoding: b64
  content: ${filebase64("${var.scripts_dir}/twilio-proxy/Caddyfile")}

apt:
  sources:
    docker.list:
      source: deb [arch=arm64] https://download.docker.com/linux/ubuntu $RELEASE stable
      # https://download.docker.com/linux/ubuntu/gpg
      key: |
        -----BEGIN PGP PUBLIC KEY BLOCK-----

        mQINBFit2ioBEADhWpZ8/wvZ6hUTiXOwQHXMAlaFHcPH9hAtr4F1y2+OYdbtMuth
[...]
        YT90qFF93M3v01BbxP+EIY2/9tiIPbrd
        =0YYh
        -----END PGP PUBLIC KEY BLOCK-----

packages:
  - docker-ce
  - docker-ce-cli
  - containerd.io
  - docker-compose

runcmd:
  - mkdir -p /data/twilio-proxy/config /data/twilio-proxy/data 
  - cd /data/twilio-proxy && docker-compose up -d
USERDATA
}

resource "aws_instance" "twilio_proxy" {
  ami                         = data.aws_ami.twilio_proxy.id
  instance_type               = "t4g.micro"
  subnet_id                   = aws_subnet.public[local.selected_availability_zones[0]].id
  vpc_security_group_ids      = [aws_security_group.twilio_proxy.id]
  associate_public_ip_address = true
  ebs_optimized               = true
  disable_api_termination     = false
  monitoring                  = false
  #iam_instance_profile        = aws_iam_instance_profile.gha-runner_profile.name # hack, because I couldn't create a new role
  user_data = base64encode(replace(local.twilio_proxy_ec2_userdata, "\r\n", "\n"))

  root_block_device {
    volume_type = "gp3"
    volume_size = 20
  }

  credit_specification {
    cpu_credits = "standard"
  }

  lifecycle {
    ignore_changes = [private_ip, ami, volume_tags]
  }

  volume_tags = merge({
    "Name" = "shared_twilio-proxy"
  }, local.common_tags)

  tags = merge({
    "Name" = "shared_twilio-proxy"
  }, local.common_tags)
}

resource "aws_eip" "twilio_proxy" {
  instance = aws_instance.twilio_proxy.id
  vpc      = true

  tags = merge({
    "Name" = "shared_twilio-proxy"
  }, local.common_tags)
}


# resource "aws_iam_role" "twilio_proxy_role" {
#   name = "shared_twilio-proxy"

#   assume_role_policy = <<POLICY
# {
#   "Version": "2012-10-17",
#   "Statement": [
#     {
#       "Effect": "Allow",
#       "Principal": {
#         "Service": "ec2.amazonaws.com"
#       },
#       "Action": "sts:AssumeRole"
#     }
#   ]
# }
# POLICY
# }

# resource "aws_iam_instance_profile" "twilio_proxy_profile" {
#   name = "shared_twilio-proxy"
#   role = aws_iam_role.twilio_proxy_role.name
# }

# resource "aws_iam_role_policy_attachment" "twilio_proxy_ssm_policy" {
#   policy_arn = "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
#   role       = aws_iam_role.twilio_proxy_role.name
# }

resource "aws_security_group" "twilio_proxy" {
  name   = "twilio-proxy-sg"
  vpc_id = aws_vpc.main.id

  egress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Used for EC2 instance connect
  # egress {
  #   from_port   = 22
  #   to_port     = 22
  #   protocol    = "tcp"
  #   cidr_blocks = ["0.0.0.0/0"]
  # }

  # ingress {
  #   from_port   = 22
  #   to_port     = 22
  #   protocol    = "tcp"
  #   cidr_blocks = ["0.0.0.0/0"]
  # }

  tags = merge({
    "Name" = "twilio-proxy-sg"
  }, local.common_tags)
}

output "twilio_proxy_eip" {
  value = aws_eip.twilio_proxy.public_ip
}
